Export to yaml the number of points used for the discretization

--- a/virtual_mechanism/config/cfg.yml
+++ b/virtual_mechanism/config/cfg.yml
@@ -7,6 +7,7 @@ second_order:
  inertia: 0.1
 gmr:
  n_gaussians: 10
+ n_points_discretization: 10
 gmr_normalized:
  use_spline_xyz: true
  n_points_splines: 100
