--- a/virtual_mechanism/package.xml
+++ b/virtual_mechanism/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>virtual_mechanism</name>
   <version>0.0.0</version>
   <description>Virtual Mechanism</description>
@@ -13,11 +13,9 @@
   <author email="gennaro.raiola@gmail.com">Gennaro Raiola</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>toolbox</build_depend>
-  <build_depend>roslib</build_depend>
-  <build_depend>vf_gmr</build_depend>
-  <run_depend>toolbox</run_depend>
-  <run_depend>roslib</run_depend>
-  <run_depend>vf_gmr</run_depend>
+  <depend>roslib</depend>
+  <build_depend>vf_toolbox</build_depend>
+
+  <test_depend>rostest</test_depend>
 
 </package>
